--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -44,21 +44,21 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXz-kQ-vaL" userLabel="Like Button">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z2Z-pF-zIP">
                                                     <rect key="frame" x="335" y="4" width="42" height="42"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="like_button_on 1"/>
+                                                    <state key="normal" image="like_button_on"/>
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="BXz-kQ-vaL" firstAttribute="top" secondItem="7Cv-bM-D1h" secondAttribute="top" id="4Kp-No-5Dm"/>
-                                                <constraint firstItem="BXz-kQ-vaL" firstAttribute="trailing" secondItem="7Cv-bM-D1h" secondAttribute="trailing" id="B1O-8r-DJw"/>
                                                 <constraint firstItem="7Cv-bM-D1h" firstAttribute="top" secondItem="7nS-fG-IDe" secondAttribute="top" constant="4" id="Gdh-94-ify"/>
                                                 <constraint firstItem="oyq-NF-LHT" firstAttribute="bottom" secondItem="7Cv-bM-D1h" secondAttribute="bottom" constant="-8" id="IhX-FL-JrZ"/>
+                                                <constraint firstItem="z2Z-pF-zIP" firstAttribute="trailing" secondItem="7Cv-bM-D1h" secondAttribute="trailing" id="P9G-rS-baG"/>
                                                 <constraint firstItem="oyq-NF-LHT" firstAttribute="leading" secondItem="7Cv-bM-D1h" secondAttribute="leading" constant="8" id="g5p-0e-QsU"/>
                                                 <constraint firstItem="oyq-NF-LHT" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7Cv-bM-D1h" secondAttribute="trailing" constant="-251" id="gqz-Fb-WLM"/>
                                                 <constraint firstItem="7Cv-bM-D1h" firstAttribute="leading" secondItem="7nS-fG-IDe" secondAttribute="leading" constant="16" id="j6d-gx-gOs"/>
                                                 <constraint firstAttribute="trailing" secondItem="7Cv-bM-D1h" secondAttribute="trailing" constant="16" id="qM0-v0-w3M"/>
+                                                <constraint firstItem="z2Z-pF-zIP" firstAttribute="top" secondItem="7Cv-bM-D1h" secondAttribute="top" id="qwl-Cm-J16"/>
                                                 <constraint firstAttribute="bottom" secondItem="7Cv-bM-D1h" secondAttribute="bottom" constant="4" id="xa0-R5-WjJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -66,7 +66,7 @@
                                         <connections>
                                             <outlet property="cellImage" destination="7Cv-bM-D1h" id="Hk5-qX-Ifi"/>
                                             <outlet property="dateLabel" destination="oyq-NF-LHT" id="Qs0-5b-4RM"/>
-                                            <outlet property="likeButton" destination="BXz-kQ-vaL" id="Xfx-DI-k6r"/>
+                                            <outlet property="likeButton" destination="z2Z-pF-zIP" id="Uia-ei-WvM"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -134,20 +134,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c16-eJ-zSc">
-                                <rect key="frame" x="171.66666666666666" y="732" width="50" height="50"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="share_button"/>
-                                <connections>
-                                    <action selector="didTapShareButton:" destination="7Ep-a8-dqz" eventType="touchUpInside" id="2XT-Zi-aRx"/>
-                                </connections>
-                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Gq-xl-bxB">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="bNa-1B-vgN" userLabel="Image View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c16-eJ-zSc">
+                                        <rect key="frame" x="192.66666666666666" y="732" width="50" height="50"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="share_button"/>
+                                        <connections>
+                                            <action selector="didTapShareButton:" destination="7Ep-a8-dqz" eventType="touchUpInside" id="2XT-Zi-aRx"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i1n-Gf-CXQ">
                                         <rect key="frame" x="29" y="67" width="48" height="48"/>
                                         <constraints>
@@ -180,11 +180,11 @@
                             <constraint firstItem="i1n-Gf-CXQ" firstAttribute="leading" secondItem="NkG-K8-CpE" secondAttribute="leading" constant="8" id="6Ba-nL-PVi"/>
                             <constraint firstItem="6Gq-xl-bxB" firstAttribute="top" secondItem="0UO-It-wBX" secondAttribute="top" id="KEy-IR-2E6"/>
                             <constraint firstItem="i1n-Gf-CXQ" firstAttribute="top" secondItem="NkG-K8-CpE" secondAttribute="top" constant="8" id="Wf9-pA-qfq"/>
-                            <constraint firstItem="c16-eJ-zSc" firstAttribute="centerX" secondItem="NkG-K8-CpE" secondAttribute="centerX" id="YHF-XV-14w"/>
+                            <constraint firstItem="NkG-K8-CpE" firstAttribute="bottom" secondItem="c16-eJ-zSc" secondAttribute="bottom" constant="36" id="bWu-eA-xjJ"/>
                             <constraint firstItem="NkG-K8-CpE" firstAttribute="trailing" secondItem="6Gq-xl-bxB" secondAttribute="trailing" id="cZI-Xs-xVc"/>
+                            <constraint firstItem="c16-eJ-zSc" firstAttribute="centerX" secondItem="NkG-K8-CpE" secondAttribute="centerX" id="fRf-C1-2ed"/>
                             <constraint firstItem="6Gq-xl-bxB" firstAttribute="leading" secondItem="NkG-K8-CpE" secondAttribute="leading" id="jpr-nc-zps"/>
                             <constraint firstAttribute="bottom" secondItem="6Gq-xl-bxB" secondAttribute="bottom" id="n2j-RC-eqP"/>
-                            <constraint firstItem="NkG-K8-CpE" firstAttribute="bottom" secondItem="c16-eJ-zSc" secondAttribute="bottom" constant="36" id="ty5-kg-RUO"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="SIY-1G-wnl"/>
@@ -200,7 +200,7 @@
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
-        <image name="like_button_on 1" width="42" height="42"/>
+        <image name="like_button_on" width="42" height="42"/>
         <image name="nav_back_button_white" width="24" height="24"/>
         <image name="share_button" width="50" height="50"/>
         <image name="tab_editorial_active" width="30" height="30"/>
